--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="something_went_wrong">Something went wrong ...</string>
-    <string name="loading">loading ...</string>
+    <string name="something_went_wrong">Something went wrong …</string>
+    <string name="loading">loading …</string>
+    <string name="username_placeholder">\@%1$s </string>
+
+
 </resources>
